Fix word-spacing display for top banner

--- a/css/main.css
+++ b/css/main.css
@@ -1202,12 +1202,11 @@ input[type="submit"] {
 }
 
 #omens-body #omens-top #current-user .user-name b {
-  font: 800 18px/70% playfair display;
+  font: 800 1.1rem/.7 'playfair display',serif;
   letter-spacing: 0px;
   text-transform: lowercase;
   color: var(--main-accent);
   animation: 30s linear infinite rainbow-demo3;
-  word-spacing: 100vw;
   margin-top: 3px;
 }
 
